<resources>
    <string name="app_name">BLE</string>
    <string name="scan">scan</string>
    <string name="disconnect">disconnect</string>
    <string name="connect">connect</string>

    <string name="Connected">connected</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="disconnected">Disconnected</string>
    <string name="label_data">Data:</string>
    <string name="no_data">No data</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="image_0">Image_0</string>
    <string name="image_1">Image_1</string>
    <string name="image_2">Image_2</string>
    <string name="image_3">Image_3</string>
    <string name="image_4">Image_4</string>

    <string name="plus">Increase</string>
    <string name="minus">Decrease</string>
    <string name="run">Run</string>
    <string name="sleep">Sleep</string>

    <string name="speed_low">Low speed</string>
    <string name="speed_mid">Mid Speed</string>
    <string name="speed_high">High Speed</string>
</resources>
